[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "payarc"
version = "0.1.0"
dependencies=[
    "httpx",
    "asyncio",
]
requires-python = ">=3.7"
authors = ["Payarc"]
license = "MIT"
description = "Payarc Python SDK"
readme = "README.md"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
[project.urls]
repository = "https://github.com/Payarc/payarc-sdk-python"